# snatch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
include/snatch/: cli_parser.h  extracted_font.h  glyph_algorithms.h  img_extractor.h  options.h  plugin.h  plugin_manager.h  plugin_util.h  ttf_extractor.h
lib/: CMakeLists.txt
lib/snatch/: CMakeLists.txt  cli_parser.cpp  extracted_font.cpp  glyph_algorithms.cpp  img_extractor.cpp  plugin_manager.cpp  ttf_extractor.cpp
plugins/: CMakeLists.txt
plugins/dither_1bpp_transform/: CMakeLists.txt  dither_1bpp_transform_plugin.cpp
plugins/dummy/: CMakeLists.txt  dummy_plugin.cpp
plugins/fzx_transform/: CMakeLists.txt  fzx_transform_plugin.cpp
plugins/image_extractor/: CMakeLists.txt  image_extractor_plugin.cpp
plugins/image_passthrough_extractor/: CMakeLists.txt  image_passthrough_extractor_plugin.cpp
plugins/include/snatch_plugins/: fzx_transform.h  image_passthrough_data.h  partner_bitmap_transform.h  partner_tiny_bin.h  partner_tiny_transform.h
plugins/partner_asm/: CMakeLists.txt  partner_asm_plugin.cpp
plugins/partner_bitmap_asm/: CMakeLists.txt  partner_bitmap_asm_plugin.cpp
plugins/partner_bitmap_transform/: CMakeLists.txt  partner_bitmap_transform_plugin.cpp
plugins/partner_tiny_bin_extractor/: CMakeLists.txt  partner_tiny_bin_extractor_plugin.cpp
plugins/partner_tiny_raster_transform/: CMakeLists.txt  partner_tiny_raster_transform_plugin.cpp
plugins/partner_tiny_transform/: CMakeLists.txt  partner_tiny_transform_plugin.cpp
plugins/png/: CMakeLists.txt  png_plugin.cpp
plugins/raw_bin/: CMakeLists.txt  raw_bin_plugin.cpp
plugins/raw_c/: CMakeLists.txt  raw_c_plugin.cpp
plugins/ttf_extractor/: CMakeLists.txt  ttf_extractor_plugin.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_cli_parser.cpp  test_glyph_algorithms.cpp  test_img_extractor.cpp  test_pipeline_plugins.cpp
